--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div id="card">
 
-        <img src="images/desktop.jpg">
+        <div class="img"></div>
 
         <div class="internaCard">
 
